# Coleccion-de-Ejercicios-para-Nociones-Clave

./: CMakeLists.txt  README.md  ejercicios 6 y 7 descripción  estudiante.h  main.cpp  main.h  matematicas.cpp  matematicas.h
